
  - Query.join(), Query.outerjoin(), eagerload(), 
    eagerload_all(), others no longer allow lists 
    of attributes as arguments (i.e. option([x, y, z]) 
    form, deprecated since 0.5)

  - ScopedSession.mapper is removed (deprecated since 0.5).

  - Horizontal shard query places 'shard_id' in 
    context.attributes where it's accessible by the 
    "load()" event. [ticket:2031]

- sql
  - LIMIT/OFFSET clauses now use bind parameters
    [ticket:805]

  - TypeDecorator works with primary key columns
    [ticket:2005] [ticket:2006]

  - DDL() constructs now escape percent signs
    [ticket:1897]

  - Table.c / MetaData.tables refined a bit, don't allow direct 
    mutation  [ticket:1893] [ticket:1917]

  - Callables passed to `bindparam()` don't get evaluated
    [ticket:1950]

  - types.type_map is now private, types._type_map
    [ticket:1870]

  - Non-public Pool methods underscored
    [ticket:1982]

  - Added NULLS FIRST and NULLS LAST support. It's implemented
    as an extension to the asc() and desc() operators, called
    nullsfirst() and nullslast().  [ticket:723]

  - The Index() construct can be created inline with a Table
    definition, using strings as column names, as an alternative
    to the creation of the index outside of the Table.

  - execution_options() on Connection accepts 
    "isolation_level" argument, sets transaction isolation
    level for that connection only until returned to the
    connection pool, for thsoe backends which support it
    (SQLite, Postgresql) [ticket:2001]

  - A TypeDecorator of Integer can be used with a primary key
    column, and the "autoincrement" feature of various dialects
    as well as the "sqlite_autoincrement" flag will honor
    the underlying database type as being Integer-based.
    [ticket:2005]

  - Established consistency when server_default is present
    on an Integer PK column.  SQLA doesn't pre-fetch these,
    nor do they come back in cursor.lastrowid (DBAPI).  