@@ -91,6 +91,16 @@ CHANGES
     context.attributes where it's accessible by the 
     "load()" event. [ticket:2031]
 
+  - A single contains_eager() call across
+    multiple entities will indicate all collections
+    along that path should load, instead of requiring
+    distinct contains_eager() calls for each endpoint
+    (which was never correctly documented).
+    [ticket:2032]
+
+  - The "name" field used in orm.aliased() now renders
+    in the resulting SQL statement.
+
 - sql
   - LIMIT/OFFSET clauses now use bind parameters
     [ticket:805]
